apps/grobid/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grobid
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grobid
  ports:
    - name: http
      port: 8070
      targetPort: http
      protocol: TCP
