apps/grobid/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grobid
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
    - hosts:
        - grobid.dawnfire.casa
      secretName: grobid-tls
  rules:
    - host: grobid.dawnfire.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grobid
                port:
                  number: 8070
